commit sur V14 dockerfile

--- a/docker/dockerfile
+++ b/docker/dockerfile
@@ -1,5 +1,5 @@
 FROM debian:buster-slim
-MAINTAINER Odoo S.A. <info@odoo.com>
+# MAINTAINER storres@epsilon-alcen.com
 
 SHELL ["/bin/bash", "-xo", "pipefail", "-c"]
 
@@ -35,6 +35,7 @@ RUN apt-get update && \
     && echo 'ea8277df4297afc507c61122f3c349af142f31e5 wkhtmltox.deb' | sha1sum -c - \
     && apt-get install -y --no-install-recommends ./wkhtmltox.deb \
     && rm -rf /var/lib/apt/lists/* wkhtmltox.deb
+    # voir possible ajout pandas et plotty pour visualisation
 
 # install latest postgresql-client
 RUN echo 'deb http://apt.postgresql.org/pub/repos/apt/ buster-pgdg main' > /etc/apt/sources.list.d/pgdg.list \
